<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:background="@color/md_theme_background"
    tools:context=".MainActivity">



    <!-- SECTION: SYNC-->
    <LinearLayout
        android:id="@+id/sync_facts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="6"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Sync data button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/sync"
            style="@style/Widget.Material3.Button.TonalButton"
            android:textColor="?attr/colorTertiary"
            app:backgroundTint="?attr/colorTertiaryContainer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4.75"
            android:layout_marginEnd="10dp"
            android:text="@string/sync_button"
            app:icon="@android:drawable/stat_notify_sync"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- total logs -->
        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.25"
            app:cardBackgroundColor="?attr/colorSurfaceContainerLow">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="16dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_of_logs_title"
                    android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                    android:alpha="0.7"/>

                <TextView
                    android:id="@+id/stat_total_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_of_logs"
                    android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
                    android:textColor="?attr/colorPrimary" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>









    <!-- scrollable start -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/details_button"
        app:layout_constraintTop_toBottomOf="@id/sync_facts">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="24dp">










            <!-- TITLE -->
            <TextView
                android:id="@+id/status_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="18dp"
                android:text="@string/home_title"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
                android:textColor="?attr/colorOnSurfaceVariant" />






            <!-- SECTION: IDENTIFIED TRIGGERS -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/set_triggers_title"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:textColor="?attr/colorPrimary" />

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.Material3.CardView.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="12dp">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/factors_chip_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    app:chipSpacingHorizontal="8dp">

                </com.google.android.material.chip.ChipGroup>
            </com.google.android.material.card.MaterialCardView>

            <!-- edit triggers button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/trigger_list_button"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/edit_triggers" />








            <!-- SECTION: SUSPECTED TRIGGER INFO -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/common_factors_title"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:textColor="?attr/colorPrimary" />

            <!-- should show as many factors as show >=51% of the time? -->
            <LinearLayout
                android:id="@+id/common_factors_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- factors display -->
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- Button to trigger in depth details page -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/details_button"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/detailed_page_button"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>