<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface">

    <!-- Scrollable content -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <!-- Title -->
            <TextView
                android:id="@+id/edit_tags_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_triggers_title"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
                android:textColor="?attr/colorPrimary"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />



            <!-- Remove existing triggers -->
            <TextView
                android:id="@+id/remove_tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/remove_triggers_title"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                app:layout_constraintTop_toBottomOf="@id/edit_tags_title"
                app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/existing_factors_chip_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    app:chipSpacingHorizontal="12dp"
                    app:chipSpacingVertical="8dp"
                    app:layout_constraintTop_toBottomOf="@id/remove_tags"/>

            <!-- Suggested Section -->
            <TextView
                android:id="@+id/suggested_tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/suggested_triggers_title"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                app:layout_constraintTop_toBottomOf="@id/existing_factors_chip_group"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/suggested_factors_chip_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:chipSpacingHorizontal="12dp"
                app:layout_constraintTop_toBottomOf="@id/suggested_tags" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- Add trigger dialog button -->
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/add_trigger_button"
        style="@style/Widget.Material3.FloatingActionButton.Secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="24dp"
        android:text="@string/add_button"
        app:icon="@android:drawable/ic_input_add"
        app:elevation="6dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>